tests/reject/pkg/privacy_cross/main.ty
package main
import "secretlib"

# B3: a cross-package access to a leading-underscore (package-private) name must
# be rejected by the resolver. `secretlib._scale` starts with '_', so this is a
# privacy violation even though the symbol exists.
fn main():
    print(str(secretlib._scale(5, 2)) + "\n")
